# ip-discovery

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  package-lock.json  package.json
.github/workflows/: ci.yml  publish-crate.yml  publish.yml  release-lib.yml  release.yml
.husky/: pre-commit
examples/: benchmark.rs  custom_providers.rs  simple.rs
ipd/: Cargo.toml
ipd/src/: main.rs
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
node/src/: lib.rs
src/: config.rs  error.rs  lib.rs  provider.rs  resolver.rs  types.rs
src/dns/: mod.rs  protocol.rs  providers.rs
src/http/: mod.rs  providers.rs
src/stun/: message.rs  mod.rs  providers.rs
tests/: integration.rs  resolver.rs  unit.rs
