[workspace]
members = ["ipd"]

[package]
name = "ip-discovery"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
description = "A lightweight, high-performance library for detecting public IP addresses via DNS, HTTP, and STUN protocols"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zer0horizon/ip-discovery"
homepage = "https://github.com/zer0horizon/ip-discovery"
documentation = "https://docs.rs/ip-discovery"
readme = "README.md"
authors = ["zer0horizon"]
keywords = ["ip", "public-ip", "stun", "dns", "network"]
categories = ["network-programming"]
exclude = ["target/", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.dist]
dist = false

[features]
default = ["dns", "stun"]
dns = []
http = ["dep:reqwest"]
stun = []
all = ["dns", "http", "stun"]
native-tls = ["reqwest?/native-tls"]

[dependencies]
getrandom = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["net", "time"] }

# Optional - HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
