[package]
name = "ipd"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "CLI tool to discover your public IP address"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zer0horizon/ip-discovery"
homepage = "https://github.com/zer0horizon/ip-discovery"
readme = "../README.md"
authors = ["zer0horizon"]
keywords = ["ip", "public-ip", "cli", "network"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ipd"

[dependencies]
ip-discovery = { path = "..", features = ["all"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
